# ncsb

./: .gitignore  AUTHORS  CLI_TEMPLATE.md  PROGRESS.md  README.md  display.hy  lms_controller.hy  main.hy  ncsb  ncsb_cli.py  requirements.txt  screen.hy  setup.cfg  sixel.hy  util.hy
contrib/: ncsb-notifyd.sh
ncsb/: #lms_controller.hy#  .hy-history  .lms_controller.hy.~undo-tree~  __init__.py  cli.py  display.hy  gui.py  lms_controller.hy  main.hy  ncsb.py  screen.hy  sixel.hy  tui.hy  util.hy
