[metadata]
name = ncsb
description = An ncurses Squeezebox controller for Logitech Media Server (LMS / slimserver)
url = https://github.com/atisharma/ncsb
author = Ati Sharma
author_email = ati.sharma+ncsb@diplomail.ch
keywords = squeezebox, slimserver, lms, hy
license = GPL-3
license_file = LICENSE
long_description = file: README.md


[options]
python_requires = >= 3.8
install_requires =
    hy==0.20.0
    requests
    libsixel-python
include_package_data = True
package_dir = 
packages = find:

[options.entry_points]
console_scripts =
    ncsb = ncsb.ncsb:cli

[options.packages.find]
where = 

[options.package_data]
* = *.hy
