[metadata]
name = ncsb
description = An ncurses Squeezebox controller for Logitech Media Server (LMS / slimserver)
url = https://github.com/atisharma/ncsb
author = Ati Sharma
author_email = ati.sharma+ncsb@diplomail.ch
keywords = squeezebox, slimserver, lms, Lyrion, hy
license = GPL-3
license_file = LICENSE
long_description = file: README.md


[options]
python_requires = >= 3.9
install_requires = file: requirements.txt
include_package_data = True
package_dir = 
packages = find:

[options.extras_require]
sixel = libsixel-python

[options.entry_points]
console_scripts =
    ncsb = ncsb.ncsb:cli
    ncsb-playing = ncsb.ncsb:playing
    ncsb-cli = ncsb.cli:main

[options.packages.find]
where = 

[options.package_data]
* = *.hy
