[metadata]
name = ncsb
description = An ncurses Squeezebox controller for Lyrion Media Server (LMS / slimserver / Logitech Music Server)
url = https://github.com/atisharma/ncsb
author = Ati Sharma
author_email = ati+ncsb@agalmic.ltd
keywords = squeezebox, slimserver, lms, Lyrion, hy
license = GPL-3
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown


[options]
python_requires = >= 3.10
install_requires = file: requirements.txt
include_package_data = True
package_dir = 
packages = find:

[options.extras_require]
sixel = libsixel-python
gui = PySide6

[options.entry_points]
console_scripts =
    ncsb = ncsb.cli:main

[options.packages.find]
where = 

[options.package_data]
* = *.hy
